fixed overflow

--- a/src/components/QnAPage/LabProbs/Lab.css
+++ b/src/components/QnAPage/LabProbs/Lab.css
@@ -31,7 +31,7 @@ body {
   font-size: 1.5rem;
   font-weight: 600;
   padding: 20px;
-  background-color: #434343;
+  background-color: #43434390;
   color: white;
   cursor: pointer;
   border-bottom: 1px solid #5be6ff;
