--- a/src/components/QnAPage/LabProbs/LabTopic.css
+++ b/src/components/QnAPage/LabProbs/LabTopic.css
@@ -1,6 +1,5 @@
 .LabTopicList {
-  justify-items: center;
-  align-items: center;
+  overflow-x: auto;
 }
 .question-row {
   justify-content: center;
@@ -10,6 +9,7 @@
   font-family: "Arial", sans-serif;
   margin: 1rem 2rem 1rem 0rem;
 }
+
 @media screen and (max-width: 500px) {
   .LabTopic {
     margin: 0rem;
